Fixed graph button alignment and border

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -12,5 +12,5 @@ body {
 #mynetwork {
     width: 100%;
     height: 100vh;
-    border: 1px solid lightgray;
+    padding-bottom: 5vh;
 }
